# inhouse

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PRO.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
deploy/: HARDENING.md
deploy/docker/: Dockerfile  docker-compose.yml
deploy/systemd/: inhouse.service.example
docs/: architecture.md  providers.md
launch/: lobsters.md  reddit-localllama.md  reddit-selfhosted.md  show-hn.md
scripts/: e2e_check.sh  gen_demo_voice.py  hello.ps1  hello.sh  mock_llm.py  record_gif.mjs  screenshots.mjs  setup.ps1  setup.sh
server/: README.md  pyproject.toml
server/src/inhouse/: config.py  main.py  sentences.py  sessions.py  turns.py
server/src/inhouse/adapters/: __init__.py  llm.py  stt.py  tts.py
server/src/inhouse/audio/: broker.py  gate.py  wav.py
server/tests/: conftest.py  test_api.py  test_broker.py  test_env_example.py  test_llm_adapters.py  test_sentences.py  test_sessions.py  test_tts_adapters.py  test_wav.py
site/: README.md  index.html  main.js  styles.css
site/demo/: index.html
site/demo/assets/: demo-CY4KhiIv.js  demo-Cgy-7v8H.js  demo-DeKJ0lOL.css
web/: demo.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.demo.config.ts
web/public/: manifest.json  sw.js
web/src/: App.tsx  api.test.ts  api.ts  demoMain.tsx  main.tsx  settings.test.ts  settings.ts  styles.css  types.ts
web/src/audio/: recorder.ts  streamPlayback.ts  vad.test.ts  vad.ts
web/src/components/: Composer.tsx  ErrorBanner.tsx  (+4 more)
(+4 files in other folders)
